--- a/Metaphor.tex
+++ b/Metaphor.tex
@@ -23,14 +23,18 @@
 \section{Introduction}
 
 	
-    A metaphor is a novel linguistic expression used outside of its normal conventional meaning to refer to an entity, property or relation it does not literally denote. Consider this except from Shakespeare's Romeo and Juliet: ``t is the east, and Juliet is the sun."  Shakespeare means to convey not that Juliet is a celestrial body, but that to Romeo, her beauty is greater, or `outshines' that of all other entities.  
+    A metaphor is a novel linguistic expression used outside of its normal conventional meaning to refer to an entity, property or relation it does not literally denote. Consider this except from Shakespeare's Romeo and Juliet: ``It is the east, and Juliet is the sun."  Shakespeare means to convey not that Juliet is a celestial body, but that to Romeo, her beauty is greater, or `outshines' that of all other entities.  
 	Metaphors have generally been considered rare, ornamental linguistic phenomena, restricted to the domains of poetry and literature.  However, in conceptual metaphor theory (CMT), metaphor is recast as fundamentally conceptual in nature, in that it establishes correspondences between concepts from disparate domains of knowledge. (Lakoff and Johnson, 1980). 
 	
 	CMT claims that our entire conceptual system is metaphorical and that these conceptual metaphors are present in everyday, conventional communication. In this framework, familiar metaphors, e.g. ``we have come a long way" are linguistic manifestations of underlying conceptual relationships such as ``love is a journey" or ``argument is war." 
 	
-	With respect to metaphor processing, the standard pragmatic model (Grice, 1975) holds   that a hearer first attempts to process a metaphor literally, but if the literal interpretation turns out to be false, an interpretation is sought that renders the utterance true. This is because conversations are considered to be cooperative efforts undertaken in pursuit of  a common communicative goal (Grice, 1975).  Participants in a conversation make contributions that advance the shared goal, by offering information that they believe to be true as well as relevant, informative and clear (Grice's Maxims of Quality, Relation, Quantity and Manner).
+	With respect to metaphor processing, CMT differs from the standard pragmatic model  which holds that a hearer first attempts to process a metaphor literally, but if the literal interpretation turns out to be false, an interpretation is sought that renders the utterance true (Ortony, 1979). According to the standard pragmatic model because conversations are considered to be cooperative efforts undertaken in pursuit of  a common communicative goal (Grice, 1975).  Participants in a conversation make contributions that advance the shared goal, by offering information that they believe to be true as well as relevant, informative and clear. 
 	
-	If a listener believes that a speaker adheres to the cooperative principle, the speaker's use a literally false nominal metaphor of the form `an a is a b', forces the listener to search for an alternative metaphorical interpretation that renders the utterance true.  This alternative interpretation is attained by engaging in an implicit comparison via which the hearer compares the features of `a’, the target, with those of `b’, the vehicle.  This  feature-matching process highlights preexisting but potentially obscure similarities between the target and base concepts. 
+	If a listener believes that a speaker adheres to the cooperative principle, the speaker's use of a literally false nominal metaphor of the form `an a is a b', forces the listener to search for an alternative metaphorical interpretation that renders the utterance true.  This alternative interpretation is attained by engaging in an implicit comparison via which the hearer compares the features of `a’, the target, with those of `b’, the vehicle.  This  feature-matching process highlights preexisting but potentially obscure similarities between the target and base concepts. (Ortony’s, 1979; Gentner’s 1983). Thus, metaphors are similes with the comparison word “like” omitted and metaphors are processed in the same way that their simile counterparts would be;  (Glucksberg and Keysar, 1993).
+	
+	Because of the extra steps and effort involved in processing a metaphorical sentence, metaphors should take longer to process than literal sentences. But studies conducted by Gibbs and colleagues (1982; 1984) comparing reading times for literal and nonliteral sentences (which included metaphor, irony, and indirect requests) found equivalent reading times for both types. These results suggest that accessing a literal interpretation is not obligatory when processing nonliteral sentences. 
+	
+	Moreoever, comparison theories are challenged by experimental data showing that “A is a B” metaphors are processed faster than similes, and that participants prefer metaphors in direct metaphor form over metaphors in simile form (Chiappe and Kennedy, 2000; Johnson, 1996).
 	
 	However, an alternative view of metaphor interpretation is that metaphors are not processed as comparisons, but rather as categorical assertions, where the entity ‘a’ is claimed to be a member of the superordinate category ‘b’.  
 	
