txs auto checkin

--- a/Metaphor.tex
+++ b/Metaphor.tex
@@ -70,5 +70,8 @@
 	Metaphors generally elicit greater N400 amplitudes than literal sentences and this is what we found.
 	However, we found show no differences in N400 amplitude between cued (deliberate) and uncued (non-deliberate) metaphors. 
 	All metaphors, deliberate or not, produced uniformly greater N400s than non-metaphor sentences. Therefore, the results of this study do not provide any evidence in support of Deliberate Metaphor Theory. 
+	
+\bibliographystyle{plainnat}
+\bibliography{metaphor}	
 
 \end{document}
