--- a/Metaphor.tex
+++ b/Metaphor.tex
@@ -2,7 +2,8 @@
 
 \usepackage[letterpaper, portrait, margin=.75in]{geometry}
 \usepackage{parskip}
-\usepackage[round, sort, semicolon]{natbib}
+\usepackage[style=authoryear]{biblatex}
+\\addbibresource{metaphor.bib}
 \usepackage{phonetic}
 
 %opening
@@ -71,7 +72,6 @@
 	However, we found show no differences in N400 amplitude between cued (deliberate) and uncued (non-deliberate) metaphors. 
 	All metaphors, deliberate or not, produced uniformly greater N400s than non-metaphor sentences. Therefore, the results of this study do not provide any evidence in support of Deliberate Metaphor Theory. 
 	
-\bibliographystyle{plainnat}
-\bibliography{metaphor}	
+\printbibliography
 
 \end{document}
