txs auto checkin

--- a/Metaphor.tex
+++ b/Metaphor.tex
@@ -3,7 +3,7 @@
 \usepackage[letterpaper, portrait, margin=.75in]{geometry}
 \usepackage{parskip}
 \usepackage[style=authoryear]{biblatex}
-\\addbibresource{metaphor.bib}
+\addbibresource{metaphor.bib}
 \usepackage{phonetic}
 
 %opening
@@ -25,7 +25,7 @@
 
 	
     A metaphor is a novel linguistic expression used outside of its normal conventional meaning to refer to an entity, property or relation it does not literally denote. Consider this except from Shakespeare's Romeo and Juliet: ``It is the east, and Juliet is the sun."  Shakespeare means to convey not that Juliet is a celestial body, but that to Romeo, her beauty is greater, or `outshines' that of all other entities.  
-	Metaphors have generally been considered rare, ornamental linguistic phenomena, restricted to the domains of poetry and literature.  However, in conceptual metaphor theory (CMT), metaphor is recast as fundamentally conceptual in nature, in that it establishes correspondences between concepts from disparate domains of knowledge. (Lakoff and Johnson, 1980). 
+	Metaphors have generally been considered rare, ornamental linguistic phenomena, restricted to the domains of poetry and literature.  However, in conceptual metaphor theory (CMT), metaphor is recast as fundamentally conceptual in nature, in that it establishes correspondences between concepts from disparate domains of knowledge\parencite{lakoff_conceptual_1980}. (Lakoff and Johnson, 1980). 
 	
 	CMT claims that our entire conceptual system is metaphorical and that these conceptual metaphors are present in everyday, conventional communication. In this framework, familiar metaphors, e.g. ``we have come a long way" are linguistic manifestations of underlying conceptual relationships such as ``love is a journey" or ``argument is war." 
 	
