txs auto checkin

--- a/Metaphor.tex
+++ b/Metaphor.tex
@@ -26,11 +26,11 @@
 
 	
     A metaphor is a novel linguistic expression used outside of its normal conventional meaning to refer to an entity, property or relation it does not literally denote. Consider this except from Shakespeare's Romeo and Juliet: ``It is the east, and Juliet is the sun."  Shakespeare means to convey not that Juliet is a celestial body, but that to Romeo, her beauty is greater, or `outshines' that of all other entities.  
-	Metaphors have generally been considered rare, ornamental linguistic phenomena, restricted to the domains of poetry and literature.  However, in conceptual metaphor theory (CMT), metaphor is recast as fundamentally conceptual in nature, in that it establishes correspondences between concepts from disparate domains of knowledge\parencite{lakoff_conceptual_1980}. (Lakoff and Johnson, 1980). 
+	Metaphors have generally been considered rare, ornamental linguistic phenomena, restricted to the domains of poetry and literature.  However, in conceptual metaphor theory (CMT), metaphor is recast as fundamentally conceptual in nature, in that it establishes correspondences between concepts from disparate domains of knowledge\parencite{lakoff_conceptual_1980}.  
 	
 	CMT claims that our entire conceptual system is metaphorical and that these conceptual metaphors are present in everyday, conventional communication. In this framework, familiar metaphors, e.g. ``we have come a long way" are linguistic manifestations of underlying conceptual relationships such as ``love is a journey" or ``argument is war." 
 	
-	With respect to metaphor processing, CMT differs from the standard pragmatic model  which holds that a hearer first attempts to process a metaphor literally, but if the literal interpretation turns out to be false, an interpretation is sought that renders the utterance true (Ortony, 1979). According to the standard pragmatic model conversations are considered to be cooperative efforts undertaken in pursuit of  a common communicative goal (Grice, 1975).  Participants in a conversation make contributions that advance the shared goal, by offering information that they believe to be true as well as relevant, informative and clear. 
+	With respect to metaphor processing, CMT differs from the standard pragmatic model  which holds that a hearer first attempts to process a metaphor literally, but if the literal interpretation turns out to be false, an interpretation is sought that renders the utterance true \parencite{ortony_metaphor_1979}. According to the standard pragmatic model conversations are considered to be cooperative efforts undertaken in pursuit of  a common communicative goal \parencite{})).  Participants in a conversation make contributions that advance the shared goal, by offering information that they believe to be true as well as relevant, informative and clear. 
 	
 	If a listener believes that a speaker adheres to the cooperative principle, the speaker's use of a literally false nominal metaphor of the form `an a is a b', forces the listener to search for an alternative metaphorical interpretation that renders the utterance true.  This alternative interpretation is attained by engaging in an implicit comparison via which the hearer compares the features of `a’, the tenor, with those of `b’, the vehicle. (Ortony’s, 1979; Gentner’s 1983). Thus, metaphors are similes with the comparison word “like” omitted and metaphors are processed in the same way that their simile counterparts would be;  (Glucksberg and Keysar, 1993).
 	
