txs auto checkin

--- a/Metaphor.tex
+++ b/Metaphor.tex
@@ -2,9 +2,10 @@
 
 \usepackage[letterpaper, portrait, margin=.75in]{geometry}
 \usepackage{parskip}
-\usepackage[style=authoryear, backend=biber]{biblatex}
+\usepackage[style=authoryear, backend=biber, hyperref=true,]{biblatex}
 \addbibresource{metaphor.bib}
 \usepackage{phonetic}
+\usepackage{hyperref}
 
 %opening
 \title{That Project was a Roller coaster: An ERP test of Deliberate Metaphor Theory}
