txs auto checkin

--- a/Metaphor.tex
+++ b/Metaphor.tex
@@ -30,9 +30,7 @@
 	
 	This understanding of metaphor is at odds with the `standard pragmatic model' of metaphor in which conversations are considered to be cooperative efforts undertaken in pursuit of  a common communicative goal \parencite{grice_logic_1975}.  Participants in a conversation make contributions that advance the shared goal, by offering information that they believe to be true as well as relevant, informative and clear. If a listener believes that a speaker adheres to the cooperative principle, the speaker's use of a literally false nominal metaphor of the form `an a is a b', forces the listener to search for an alternative metaphorical interpretation that renders the utterance true. Under this model, a hearer first attempts to process a metaphor literally, but if the literal interpretation turns out to be false, an interpretation is sought that renders the utterance true \parencite{searle_metaphor_1993}. This alternative interpretation is attained by engaging in an implicit comparison via which the hearer compares the features of `a’, the tenor, with those of `b’, the vehicle \parencite{ortony_beyond_1979, gentner_structure-mapping:_1983}. Thus, metaphors are similes with the comparison word “like” omitted and metaphors are processed in the same way that their simile counterparts would be \parencite{glucksberg_how_1993}.
 	
-	Moreoever, comparison theories are challenged by experimental data showing that “A is a B” metaphors are processed faster than similes, and that participants prefer metaphors in direct metaphor form over metaphors in simile form (Chiappe and Kennedy, 2000; Johnson, 1996).
-	
-	However, an alternative view of metaphor interpretation is that metaphors are not processed as comparisons, but rather as categorical assertions, where the entity ‘a’ is claimed to be a member of the superordinate category ‘b’.  
+	Comparison theories are challenged by experimental data showing that “A is a B” metaphors are processed faster than similes, and that participants prefer metaphors in direct metaphor form over metaphors in simile form \parencite{chiappe_are_2000}(Chiappe and Kennedy, 2000; Johnson, 1996).  Thus, an alternative view of metaphor interpretation is that metaphors are not processed as comparisons, but rather as categorical assertions, where the entity ‘a’ is claimed to be a member of the superordinate category ‘b’.  
 	
 	Bowdle and Gentner (2005) unify these positions by asserting that as metaphors are conventionalized, there is a shift in mode of processing from comparison to categorization; novel metaphors are processed by comparison alone, whereas conventional metaphors can be processed by either mode.  However, whether a metaphor is processed by comparison or categorization is determined not only by its novelty, but also by its form.  When a conventional metaphor takes the form of a simile, it is processed by comparison; in contrast when a novel metaphor takes the form of a categorical assertion such as ‘an a is a b’, people process the target as an instance of the source category, i.e. by categorization.
 	
